Bug 456168 - wine applications in system tray do not react to click/right click when using PLASMA_USE_QT_SCALING
Summary: wine applications in system tray do not react to click/right click when using...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: XembedSNIProxy (other bugs)
Version First Reported In: 5.25.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 459101 (view as bug list)
Depends on:
Blocks: 356446
  Show dependency treegraph
 
Reported: 2022-06-30 12:33 UTC by Fushan Wen
Modified: 2023-01-27 21:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-06-30 12:33:23 UTC
SUMMARY
A Wine application in the system tray does not react to click/right click events.


STEPS TO REPRODUCE
1. Open a wine application that has an icon in the system tray
2. Click/Right click the icon

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The icon is activated/context menu is opened.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220626
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.2
Kernel Version: 5.18.4-1-default (64-bit)
Graphics Platform: X11
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor: AMD RENOIR
Comment 1 Nate Graham 2022-08-01 16:29:16 UTC
*** Bug 457376 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2022-09-14 17:02:36 UTC
*** Bug 459101 has been marked as a duplicate of this bug. ***
Comment 3 Fushan Wen 2023-01-14 17:25:13 UTC
Yet another Qt scaling bug
Comment 4 Bug Janitor Service 2023-01-15 02:47:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2503
Comment 5 Fushan Wen 2023-01-25 02:09:24 UTC
Git commit 8b1250ac9d6f858a5e4374c795348f48801c511f by Fushan Wen.
Committed on 25/01/2023 at 02:07.
Pushed by fusionfuture into branch 'master'.

applets/systemtray: fix xembed icon not receiving click events when using Qt scaling

On X11, when using Qt scaling, mapToGlobal will return a scaled position
which is unusable in `SNIProxy::sendClick`. This fixes the bug by
multiplying the position  by devicePixelRatio.
FIXED-IN: 5.27

M  +1    -0    applets/systemtray/CMakeLists.txt
M  +23   -2    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/8b1250ac9d6f858a5e4374c795348f48801c511f
Comment 6 Fushan Wen 2023-01-25 02:10:13 UTC
Git commit 6249f888045f38cad10947d1b77adc975e8233f9 by Fushan Wen.
Committed on 25/01/2023 at 02:10.
Pushed by fusionfuture into branch 'cherry-pick-8b1250ac'.

applets/systemtray: fix xembed icon not receiving click events when using Qt scaling

On X11, when using Qt scaling, mapToGlobal will return a scaled position
which is unusable in `SNIProxy::sendClick`. This fixes the bug by
multiplying the position  by devicePixelRatio.
FIXED-IN: 5.27


(cherry picked from commit 8b1250ac9d6f858a5e4374c795348f48801c511f)

M  +1    -0    applets/systemtray/CMakeLists.txt
M  +23   -2    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6249f888045f38cad10947d1b77adc975e8233f9
Comment 7 Fushan Wen 2023-01-25 04:07:56 UTC
Git commit 7e7313a8d655b9ecf25e14442a1fefb1b25eb01f by Fushan Wen.
Committed on 25/01/2023 at 04:07.
Pushed by fusionfuture into branch 'Plasma/5.27'.

applets/systemtray: fix xembed icon not receiving click events when using Qt scaling

On X11, when using Qt scaling, mapToGlobal will return a scaled position
which is unusable in `SNIProxy::sendClick`. This fixes the bug by
multiplying the position  by devicePixelRatio.
FIXED-IN: 5.27


(cherry picked from commit 8b1250ac9d6f858a5e4374c795348f48801c511f)

M  +1    -0    applets/systemtray/CMakeLists.txt
M  +23   -2    applets/systemtray/systemtray.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/7e7313a8d655b9ecf25e14442a1fefb1b25eb01f
Comment 8 Fushan Wen 2023-01-27 18:03:43 UTC
Git commit 033b9dd14c6c807990f780858e543ad8eec0e913 by Fushan Wen.
Committed on 27/01/2023 at 15:37.
Pushed by fusionfuture into branch 'master'.

applets/systemtray: fix xembed icon not receiving click events when screen scale > 1 on Wayland

On Wayland, when using "Scaled by application", mapToGlobal will return a scaled position
which is unusable in SNIProxy::sendClick. This fixes the bug by
multiplying the position  by devicePixelRatio.
Related: bug 448050
FIXED-IN: 5.27

M  +10   -0    CMakeLists.txt
M  +14   -0    applets/systemtray/CMakeLists.txt
M  +120  -8    applets/systemtray/systemtray.cpp
M  +11   -0    applets/systemtray/systemtray.h
A  +1    -0    config-WaylandProtocols.h.cmake

https://invent.kde.org/plasma/plasma-workspace/commit/033b9dd14c6c807990f780858e543ad8eec0e913
Comment 9 Fushan Wen 2023-01-27 21:43:22 UTC
Git commit 46cb1454335cd20b5ce705ed3c1205843119055b by Fushan Wen.
Committed on 27/01/2023 at 21:43.
Pushed by fusionfuture into branch 'cherry-pick-033b9dd1'.

applets/systemtray: fix xembed icon not receiving click events when screen scale > 1 on Wayland

On Wayland, when using "Scaled by application", mapToGlobal will return a scaled position
which is unusable in SNIProxy::sendClick. This fixes the bug by
multiplying the position  by devicePixelRatio.
Related: bug 448050
FIXED-IN: 5.27


(cherry picked from commit 033b9dd14c6c807990f780858e543ad8eec0e913)

M  +10   -0    CMakeLists.txt
M  +14   -0    applets/systemtray/CMakeLists.txt
M  +120  -8    applets/systemtray/systemtray.cpp
M  +11   -0    applets/systemtray/systemtray.h
A  +1    -0    config-WaylandProtocols.h.cmake

https://invent.kde.org/plasma/plasma-workspace/commit/46cb1454335cd20b5ce705ed3c1205843119055b
Comment 10 Bug Janitor Service 2023-01-27 21:43:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2552