applets/systemtray: fix xembed icon not receiving click events when using Qt scaling

On X11, when using Qt scaling, mapToGlobal will return a scaled position
which is unusable in `SNIProxy::sendClick`. This fixes the bug by
multiplying the position  by devicePixelRatio.

BUG: 456168
FIXED-IN: 5.27


(cherry picked from commit 8b1250ac9d6f858a5e4374c795348f48801c511f)